loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:11: error: not found: value baggle
  if(baggle<=2){
     ^Poucet2:14: error: not found: value baggle
  if(baggle>=3){
     ^